# bdk-python

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  justfile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: release.md
.github/workflows/: publish-python.yaml  python-api-docs.yaml  test-bdk-ffi-latest.yaml  test-python.yaml
docs/: generate_docs.py
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
scripts/: generate-linux.sh  generate-macos-arm64.sh  generate-macos-x86_64.sh  generate-windows.sh
tests/: test_offline_custom_persist.py  test_offline_descriptor.py  test_offline_wallet.py
