[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bdkpython"
version = "2.0.0.dev0"
description = "The Python language bindings for the Bitcoin Development Kit"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [
    { name = "Bitcoin Dev Kit Developers", email = "dev@bitcoindevkit.org" }
]
keywords = ["bitcoin", "bdk", "wallet", "ffi", "rust"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/bitcoindevkit"
Repository = "https://github.com/bitcoindevkit/bdkpython"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bdkpython = ["libbdkffi.*"]

[tool.pytest.ini_options]
pythonpath = ["."]